tb.h

	
#define TB_API extern
	
	typedef enum {
		// No overflow will assume the value does not 
		// overflow and if it does this can be considered
		// undefined behavior with unknown consequences.
		// no signed wrap
		TB_ASSUME_NSW,
		// no unsigned wrap
		TB_ASSUME_NUW,
		
		// Wrapping will allow the integer to safely wrap.
		TB_CAN_WRAP,
		
		// Overflow check will throw an error if the result
		// cannot be represented in the resulting type.
		TB_SIGNED_TRAP_ON_WRAP,
		TB_UNSIGNED_TRAP_ON_WRAP,
		
		// Saturated arithmatic will clamp the results in the
		// event of overflow/underflow.
		TB_SATURATED_UNSIGNED,
		TB_SATURATED_SIGNED
	} TB_ArithmaticBehavior;
	
	typedef enum {
		TB_ARCH_X86_64,
		
		// unsupported but planned
		TB_ARCH_AARCH64
	} TB_Arch;
	
	typedef enum {
		TB_SYSTEM_WINDOWS,
		TB_SYSTEM_LINUX,
		
		// TODO(NeGate): Actually implement these lol
		TB_SYSTEM_MACOS,
		TB_SYSTEM_ANDROID
	} TB_System;
	
	typedef enum {
		TB_CDECL,
		TB_STDCALL
	} TB_CallingConv;
	
	typedef struct TB_FeatureSet {
		struct {
			bool sse3 : 1;
			
			bool popcnt : 1;
			bool lzcnt : 1;
			bool sse41 : 1;
			bool sse42 : 1;
			
			bool clmul : 1;
			bool f16c : 1;
			
			bool bmi1 : 1;
			bool bmi2 : 1;
			
			bool avx : 1;
			bool avx2 : 1;
		} x64;
		struct {
			bool bf16 : 1;
		} aarch64;
	} TB_FeatureSet;
	
	typedef enum {
		TB_LINKAGE_PUBLIC,
		TB_LINKAGE_PRIVATE
	} TB_Linkage;
	
	typedef struct TB_DataType {
		uint8_t type;
		
		// 2^N where N is the width value.
		// Only integers and floats can be wide.
		uint8_t width;
	} TB_DataType;
	
	// represents byte counts
	typedef uint32_t TB_CharUnits;
	
	typedef struct TB_Module TB_Module;
	typedef struct TB_Function TB_Function;
	typedef struct TB_FunctionPrototype TB_FunctionPrototype;
	
	// references to a node within a TB_Function
	// these are virtual registers so they don't necessarily
	// map to any hardware but instead represent some operation
	typedef int TB_Reg, TB_Register;
	
	typedef void(*TB_PrintCallback)(void* user_data, const char* fmt, ...);
	
	TB_API TB_FeatureSet tb_feature_set_zero();
	////////////////////////////////
	// Module management
	////////////////////////////////
	// Creates a module with the correct target and settings
	TB_API TB_Module* tb_module_create(TB_Arch target_arch, TB_System target_system, const TB_FeatureSet* features);
	
	// Validates IR & compiles the function into machine code.
	// returns false if it fails.
	TB_API bool tb_module_compile_func(TB_Module* m, TB_Function* f);
	
	// Waits for the machine code generation to finish before continuing.
	TB_API bool tb_module_compile(TB_Module* m);
	
	// Exports an object file with all the machine code and symbols generated.
	TB_API bool tb_module_export(TB_Module* m, const char* path, bool emit_debug_info);
	
	////////////////////////////////
	// Function Prototypes
	////////////////////////////////
	// creates a function prototype used to define a function's parameters and 
	// return type.
	//
	// function prototypes do not get freed individually and last for the entire run
	// of the backend, they can also be reused for multiple functions which have matching
	// signatures.
	TB_API TB_FunctionPrototype* tb_prototype_create(TB_Module* m, TB_CallingConv conv, TB_DataType return_dt, int num_params, bool has_varargs);
	
	// adds a parameter to the function prototype, TB doesn't support struct
	// parameters so the frontend must lower them to pointers or any other type
	// depending on their preferred ABI. 
	TB_API void tb_prototype_add_param(TB_FunctionPrototype* p, TB_DataType dt);
	
	// adds a parameter to the function prototype, TB doesn't support struct
	// parameters so the frontend must lower them to pointers or any other type
	// depending on their preferred ABI. 
	TB_API TB_Function* tb_prototype_build(TB_Module* m, TB_FunctionPrototype* p, const char* name, TB_Linkage linkage);
	TB_API void tb_function_print(TB_Function* f, TB_PrintCallback callback, void* user_data);
	TB_API TB_Reg tb_inst_param_addr(TB_Function* f, int param_id);
	
	TB_API TB_Reg tb_inst_local(TB_Function* f, uint32_t size, TB_CharUnits align);
	TB_API TB_Reg tb_inst_load(TB_Function* f, TB_DataType dt, TB_Reg addr, TB_CharUnits align);
	TB_API void tb_inst_store(TB_Function* f, TB_DataType dt, TB_Reg addr, TB_Reg val, TB_CharUnits align);
	TB_API TB_Reg tb_inst_sint(TB_Function* f, TB_DataType dt, int64_t imm);
	
	// Integer arithmatic
	TB_API TB_Reg tb_inst_add(TB_Function* f, TB_Reg a, TB_Reg b, TB_ArithmaticBehavior arith_behavior);
	TB_API void tb_inst_ret(TB_Function* f, TB_Reg value);